--- a/res/values/settings.xml
+++ b/res/values/settings.xml
@@ -2,8 +2,9 @@
 <resources>
 
 	<item name="isTest" type="bool">true</item>
-	<item name="secondsPerRound" type="integer">30</item>
-	<item name="secondsPerVotingRound" type="integer">30</item>
+	<item name="secondsPerRound" type="integer">5</item>
+	<item name="secondsPerVotingRound" type="integer">10</item>
+	<item name="secondsPerResultsRound" type="integer">10</item>
 	<string name="serverUrl">ws://10.11.0.118:8080/websocket</string>
 	<string name="facebookAppId">298308096910188</string>
 	<string name="facebookAppSecret">c252b1756cc4306efa879b9551bf8ae</string>
