--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -7,6 +7,8 @@
     <Button
     	android:id="@+id/login_facebook"
     	android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"/>
+    	android:layout_height="wrap_content"
+    	android:text="Log in with Facebook"
+    	android:onClick="onFacebookLoginClick"/>
     
 </LinearLayout>
