--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -82,6 +82,16 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/header_container" >
+	
+			<TextView
+				android:id="@+id/players_count"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:paddingLeft="5dp"
+				android:shadowColor="#000000"
+				android:shadowRadius="3"
+				android:textSize="12dp"
+				android:text="0 players" />
 
             <RelativeLayout
                 android:id="@+id/answers"
@@ -96,12 +106,12 @@
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:gravity="bottom"
-                    android:paddingBottom="10dp"
                     android:paddingLeft="5dp"
                     android:shadowColor="#000000"
                     android:shadowRadius="3"
                     android:text="Waiting for round to end..."
                     android:textSize="10dp" />
+                                        
             </RelativeLayout>
 
             <TextView
